--- a/package.json
+++ b/package.json
@@ -22,27 +22,23 @@
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/body-parser": "^1.19.2",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "html-loader": "^4.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
-    "wasm2wat": "^1.1.1",
-    "wat2wasm": "^3.0.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "template-ejs-loader": "^0.9.3"
   }
 }
