--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "amartinsmg.github.io",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "My personal portifolio",
   "scripts": {
-    "build": "npx webpack"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -31,14 +32,12 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.53.0",
+    "template-ejs-loader": "^0.9.3",
     "sass-loader": "^13.0.2",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
-  },
-  "dependencies": {
-    "template-ejs-loader": "^0.9.3"
   }
 }
