--- a/package.json
+++ b/package.json
@@ -18,22 +18,21 @@
   "bugs": {
     "url": "https://github.com/amartinsmg/Portifolio/issues"
   },
-  "homepage": "https://github.com/amartinsmg/Portifolio#readme",
+  "homepage": "https://amartinsmg.github.io",
   "devDependencies": {
     "@babel/cli": "^7.18.6",
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.53.0",
-    "template-ejs-loader": "^0.9.3",
     "sass-loader": "^13.0.2",
+    "template-ejs-loader": "^0.9.3",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
